[package]
name = "binance-rs-blazh"
version = "0.17.1"
license = "MIT OR Apache-2.0"
authors = ["blazh <blazh@163.com>"]
edition = "2018"

description = "Rust Library for the Binance API. fork from binance-rs"
keywords = ["cryptocurrency", "trading", "binance"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
repository = "https://github.com/blazood/binance-rs"
readme = "README.md"

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
hmac = "0.11.0"
sha2 = "0.9"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
error-chain = { version = "0.12.4", default-features = false }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tungstenite = { version = "0.15.0", features = ["native-tls"] }
url = "2.2.2"

[features]
vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/native-tls-vendored"]

[dev-dependencies]
csv ="1.1.6"
mockito = "0.30.0"
env_logger = "0.9.0"
criterion = "0.3"
float-cmp = "0.9.0"
serde_json = "1.0"

[[bench]]
name = "websocket_benchmark"
harness = false
